kustomize/parlacards/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlacards
  labels:
    app: parlacards-lendava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlacards-lendava
  template:
    metadata:
      labels:
        app: parlacards-lendava
    spec:
      containers:
        - name: parlacards-lendava
          image: parlacards-lendava
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 200Mi
              cpu: 200m
            limits:
              memory: 200Mi
              cpu: 200m
