kustomize/parlacards/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parlacards
spec:
  selector:
    app: parlacards
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
