kustomize/parlacards/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlacards
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - parlacards-lendava.lb.djnd.si
      secretName: parlacards-tls
  rules:
    - host: parlacards-lendava.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlacards
                port:
                  number: 3000
